
* Sun May 29 21:23:06 2005, pabs <pabs@pablotron.org>
  * rubilicious.rb: better documentation for #new opt argument
  * rubilicious.rb: del.icio.us => Delicious (except in URLs)
  * rubilicious.rb: copyright year update
  * COPYING: ditto

* Sun May 29 21:27:20 2005, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: 'www.' => ''

* Sun May 29 21:28:39 2005, pabs <pabs@pablotron.org>
  * releasing 0.1.5

* Sun May 29 22:29:02 2005, pabs <pabs@pablotron.org>
  * added AUTHORS
	* rubilicious.rb: removed shebang (as per Nobuhiro's request)
	* rubilicious.rb: incremented version to 0.1.6
	* README: ditto

* Sun May 29 22:37:21 2005, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: increment versoin to 0.1.6

* Sun Aug 13 23:04:22 2006, pabs <pabs@pablotron.org>
  * rubilicious.rb: updated copyright
  * README: same
  * COPYING: same
  * rubilicious.rb: preliminary delicious SSL api support

* Mon Aug 14 02:43:12 2006, pabs <pabs@pablotron.org>
  * rubilicious.gemspec: bump version to 0.2.0
  * rubilicious.rb: same

* Thu Aug 31 16:22:02 2006, pabs <pabs@pablotron.org>
  * rubilicious.rb: 

* Thu Aug 31 17:06:06 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: removed Time, String, and Array additions.  I've 
    added the last two back as Rubilicious::StringExtras and
    Rubilicious::ArrayExtras respectively, but I need to do a bit of
    tweaking to ensure backwards compatability.
  * rubilicious.rb: switched from String#uri_escape and String#xml_escape
    to Rubilicios#u and Rubilicious#h, respectively   
  * rubilicious.rb: use built-in Time.iso8601 calls


* Fri Sep  1 00:23:06 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: slightly cleaner private/public
  * rubilicious.rb: add replace and is_private support to
    Rubilicious#add
  * rubilicious.rb: fix Rubilicious#h so it actually does something
  * rubilicious.rb: convert timestamps to GMT first (the delicious API
    only supports ISO-8601 timestamps in GMT)